# ezudp

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  ezudp-client-test.c  ezudp-client-test.pc.in  ezudp-client.c  ezudp-client.h  ezudp-server-test.c  ezudp-server-test.pc.in  ezudp-server.c  ezudp-server.h  ezudp.c  ezudp.h  ezudp_client_test_config  ezudp_server_test_config  libezudp-client.c  libezudp-client.pc.in  libezudp-server.c  libezudp-server.pc.in  libezudp_client_config  libezudp_server_config
